fix margin bottom h1 on mobile

--- a/src/components/section/hero/hero.module.css
+++ b/src/components/section/hero/hero.module.css
@@ -51,6 +51,10 @@
         display: none;
     }
 
+    .heroText h1{
+        margin-bottom: 1rem;
+    }
+
 
 }
 
